Basic recipe list query

--- a/app/index.html
+++ b/app/index.html
@@ -14,7 +14,7 @@
     <!-- endbuild -->
 </head>
 <body ng-app="foodooApp">
-    <div class="container" ng-include="'views/main.html'" ng-controller="MainCtrl"></div>
+    <div class="container" ng-include="'views/recipe_list.html'" ng-controller="RecipeListCtrl"></div>
 
     <!-- build:js scripts/vendor.js -->
     <!-- bower:js -->
@@ -24,7 +24,7 @@
 
     <!-- build:js({.tmp,app}) scripts/scripts.js -->
     <script src="scripts/app.js"></script>
-    <script src="scripts/controllers/main.js"></script>
+    <script src="scripts/controllers/recipe_list.js"></script>
     <!-- endbuild -->
 </body>
 </html>
