--- a/app/index.html
+++ b/app/index.html
@@ -19,12 +19,14 @@
     <!-- build:js scripts/vendor.js -->
     <!-- bower:js -->
     <script src="bower_components/angular/angular.js"></script>
+    <script src="bower_components/angular-resource/angular-resource.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
     <!-- build:js({.tmp,app}) scripts/scripts.js -->
     <script src="scripts/app.js"></script>
     <script src="scripts/controllers/recipe_list.js"></script>
+    <script src="scripts/services/recipes.js"></script>
     <!-- endbuild -->
 </body>
 </html>
